syntax = "proto3";

package master;

option go_package = "github.com/kmacmcfarlane/go-scheduler/gen/protobuf/master";

service Master {
    rpc Start (StartRequest) returns (StartResponse) {}
    rpc Stop (StopRequest) returns (StopResponse) {}
    rpc Query (QueryRequest) returns (QueryResponse) {}
    rpc Log (LogRequest) returns (stream LogResponse) {}
}

message StartRequest {
    string dockerImage = 1;
    string jobName = 2;
}

message StopRequest {
    string jobName = 1;
}

message QueryRequest {
    string jobName = 1;
}

message LogRequest {
    string jobName = 1;
}

message StartResponse {
    string error = 1;
}

message StopResponse {
    string error = 1;
}

message QueryResponse {
    string error = 1;
    string status = 2;
}

message LogResponse {
    string error = 1;
    string logMessages = 2;
}